--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -898,7 +898,7 @@
 
 	#header {
 		background-attachment:	scroll,								fixed;
-		background-color: red;
+		background-color: blue;
 		background-position:	top left,							top left;
 		background-repeat:		repeat,								no-repeat;
 		background-size:		auto,								auto 100%;
